# harpocrates

./: Cargo.toml  README.md  TODO.md  go.mod  references.txt
client/: Cargo.toml  TODO.md  chan_prototype.go  client  ecdh.go  go.mod  go.sum  main.go
client/anubis/: anubis.go  cipher.go  cipher_test.go  ecdhe.go
client/cerberus/: cerberus.go  scram.go  scram_utils.go  scram_utils_test.go
client/coeus/: user_data.csv
client/hermes/: ecdhe.go  ecdhe_test.go  hermes.go  p2p.go  read_write.go
client/seshat/: seshat.go  seshat_test.go
client/src/: main.rs
crypto_module/: go.mod
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml  TODO.md  auth.go  cipher.go  coeus.go  ecdh.go  ecdhe.go  go.mod  go.sum  hermes.go  key_establishment.go  main.go  server  user_data.csv  utils.go
server/anubis/: anubis.go  cipher.go  cipher_test.go  ecdhe.go  ecdhe_test.go
server/cerberus/: cerberus.go  scram.go  scram_test.go  scram_utils.go  scram_utils_test.go
server/coeus/: coeus.go  user_data.csv
server/examples/: hello_world.rs
server/hermes/: ecdhe.go  ecdhe_test.go  hermes.go  read_write.go
server/seshat/: cipher.go  cipher_test.go  seshat.go  seshat_test.go
server/src/: auth.rs  lib.rs  main.rs
utils/: gen_data.go  go.mod  go.sum  p2p_prototype.go  utils
