[package]
name = "server"
version = "0.1.0"
authors = ["mowzhja <mowzhja@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
bytes = "1"
x25519-dalek = "1"
rand_core = "0.*"
